--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
-PerADani.tgz
-data/
-experiments/
-models/
-*.png
-*.out
-exp.sh
+# TranskribusBaseLineEvaluationScheme-0.1.3-jar-with-dependencies.jar
+# gt.lst
+# hyp.lst
+# mesures.zip
+# table_F1.txt
+# table_P.txt
+# table_R.txt
+# PerADani.tgz
+# data/
+# experiments/
+# models/
+# *.png
+# *.out
+# exp.sh
+
+# IGNORE EVERYTHING
+*
+
+# BUT THIS FOLDER
+!.gitignore
+!SRC/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
